@@ -5,6 +5,5 @@ Makefile.PL
 MANIFEST			This list of files
 README
 t/00.load.t
-t/perlcritic.t
-t/pod-coverage.t
-t/pod.t
+t/01.functions.t
+
